--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -38,6 +38,7 @@
                     {% endif %}
                 {% endfor %}
                 <span id="threshold_conf" style="display: none;">{{ threshold_conf }}</span>
+                <span id="warning_conf" style="display: none;">{{ warning_conf }}</span>
             </div>
         </div>
         <div class="col-11 col-md-4">
