--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -66,7 +66,7 @@
 
     <hr>
 
-    <div class="h5 text-sm-center px-5 px-lg-2" id="confirmation"></div>
+    <div class="h5 text-sm-center px-5" id="confirmation"></div>
     <div class="d-flex w-100 justify-content-center">
         <label class="w-auto my-4" for="finish">
             <input class="form-check-input" type="checkbox" id="finish" onclick="submit_check(finish.checked);"> すべてのアイテムをチェックしました。
