--- a/Django_Docker/toolkeeper_app/templates/history_list2.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list2.html
@@ -38,51 +38,49 @@
 
         {% if zero_result_class_history %}
         <h4 class="text-center mb-4 py-2">※以下の管理項目に異常がありました※</h4>
-            <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
-                
-                <!-- 「無し（0）」の result_class を持つ履歴を表示 -->
-                {% for history in zero_result_class_history %}
-                <div class="col mb-5">
-                    <div class="card">
-                        <a class="btn px-0 py-2" href="{% url 'toolkeeper_app:history_detail' history.pk %}">
-                            <!--badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem; font-size: 13px;">{{ history.group.group_name }}</div>
-                            <div class="badge bg-dark text-danger position-absolute" style="top: 0.5rem; left: 0.5rem; font-size: 20px;"><i class="bi bi-exclamation-circle"></i></div>
-                            <!-- Product details-->
-                            <div class="card-body px-0">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <p class="h5 pt-4 pb-1 text-danger">{{ history.asset.asset_name }}</p>
-                                    <!-- Product reviews-->
-                                    <div class="justify-content-center small mb-2">
-                                        確認日時：{{ history.checked_at }}
-                                        <br>
-                                        <!-- 更新日時: {{ history.updated_at }}
-                                        <br> -->
-                                        ユーザー：{{ history.user }}
-                                        <br>
 
-                                        <div class="px-4">
-                                            <hr>
+        <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
+            <!-- 「無し（0）」の result_class を持つ履歴を表示 -->
+            {% for history in zero_result_class_history %}
+            <div class="col mb-5">
+                <div class="card">
+                    <a class="btn px-0 py-2" href="{% url 'toolkeeper_app:history_detail' history.pk %}">
+                        <!--badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem; font-size: 13px;">{{ history.group.group_name }}</div>
+                        <div class="badge bg-dark text-danger position-absolute" style="top: 0.5rem; left: 0.5rem; font-size: 20px;"><i class="bi bi-exclamation-circle"></i></div>
+                        <!-- Product details-->
+                        <div class="card-body px-0">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <p class="h5 pt-4 pb-1 text-danger">{{ history.asset.asset_name }}</p>
+                                <!-- Product reviews-->
+                                <div class="justify-content-center small mb-2">
+                                    確認日時：{{ history.checked_at }}
+                                    <br>
+                                    <!-- 更新日時: {{ history.updated_at }}
+                                    <br> -->
+                                    ユーザー：{{ history.user }}
+                                    <br>
 
-                                            <div class="text-nowrap pb-2" style="overflow: auto;">
-                                                {% for result in history.result_set.all %}
-                                                    {% if result.result_class != 9 and result.result_class != 1 %}
-                                                        {% if result.result_class == 0 %}
-                                                            <strong><h6 style="display: inline;"><font color="#ff6347">{{ result.item.item_name }}</font>｜</h6></strong>
-                                                        {% endif %}
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
+                                    <div class="px-4">
+                                        <hr>
+
+                                        <div class="text-nowrap pb-2" style="overflow: auto;">
+                                            {% for result in history.result_set.all %}
+                                                {% if result.result_class == 0 %}
+                                                    <h6 style="display: inline;"><font color="#ff6347">{{ result.item.item_name }}</font>｜</h6>
+                                                {% endif %}
+                                            {% endfor %}
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </div>
-                {% endfor %}
             </div>
+            {% endfor %}
+        </div>
 
         {% endif %}
         <!-- ページネーションリンクの表示 -->
