--- a/Django_Docker/toolkeeper_app/templates/asset_list.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list.html
@@ -48,83 +48,150 @@
         </script>
         <hr>
         
-            {% for image in page_obj %}
-                {% if image.asset in latest_result_class_zero_assets %}
-                    <div class="row gx-lg-5 row-cols-lg-3">
-                        <div class="col mb-3">
-                            <div class="card" style="padding: 5px;">
-                                <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
-                                <div class="badge text-black position-absolute" style="top: 0.2rem; right: 0.1rem; font-size: 15px;">{{ image.asset.history_set.last.checked_at|date:"m月d日 H:i:s" }}</div>
-                                <div style="overflow: auto; white-space: nowrap;">
-                                    {% for item in image.asset.history_set.last.result_set.all %}
-                                        {% if item.result_class != 9 and item.result_class != 1 %}
-                                            <strong><h6 style="display: inline;"><font color="#ff6347">{{ item.item.item_name }}</font>,</h6></strong>
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
+        <div class="tab1">
+            <div class="tab1__item on"><span class="tab1__link" data-tab-body="1">管理項目</span></div>
+            <div class="tab1__item"><span class="tab1__link" data-tab-body="2">
+                {% if latest_result_class_zero_assets %}異常<i class="bi bi-exclamation-circle text-danger"></i>{% else %}現在異常な管理項目は見つかりません{% endif %}</span>
+            </div>
+        </div>
+        <div class="tab1-body">
+            <div class="tab1-body__item tab1-body__item--1 on">
+                {% if image_list %}
+                    <div><p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">管理項目をクリックすると詳細へ移ります</p></div>
+                {% endif %}
+                <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
+                    {% for image in page_obj %}
+                        <div class="col mb-5">
+                            <div class="card">
+                                <a class="btn" href="{% url 'toolkeeper_app:asset_detail' image.asset.id %}">
+                                    <!--badge-->
+                                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.8rem; font-size: 15px;">{{ image.asset.group.group_name }}</div>
+                                    <!-- Product image-->
+                                    {% if image.image %}
+                                        <img class="card-img-top" src="{{ image.image.url }}" alt="..." />
+                                    {% endif %}
+                                    <!-- Product details-->
+                                    <div class="card-body px-2">
+                                        <div class="text-center">
+                                            <!-- Product name-->
+                                            <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
+                                            <!-- Product reviews-->
+                                            <div class="d-flex justify-content-center small text-warning mb-2">
+                                                <!--何か入れたければ入れる-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
+                        {% empty %}
+                        <p>管理項目がありません</p>
+                    {% endfor %}
+                </div>
+
+                <!-- ページネーションリンクの表示 -->
+                {% if page_obj.paginator.count > 0 %}
+                    <div class="d-flex justify-content-center mt-4">
+                        <ul class="pagination">
+                            {% if page_obj.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page=1&group={{ request.GET.group }}">最初</a></li>
+                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}&group={{ request.GET.group }}">前へ</a></li>
+                            {% endif %}
+                            <!-- ページ番号のセレクトボックス -->
+                            <li class="page-item">
+                                <select class="form-select" onchange="window.location.href = '?page=' + this.value + '&group=' + '{{ request.GET.group }}';">
+                                    {% for page_num in page_obj.paginator.page_range %}
+                                        <option value="{{ page_num }}" {% if page_num == page_obj.number %}selected{% endif %}>{{ page_num }}</option>
+                                    {% endfor %}
+                                </select>
+                            </li>
+                            {% if page_obj.has_next %}
+                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}&group={{ request.GET.group }}">次へ</a></li>
+                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&group={{ request.GET.group }}">最後</a></li>
+                            {% endif %}
+                        </ul>
                     </div>
                 {% endif %}
-            {% endfor %}
+            </div>
 
-        {% if image_list %}
-            <div><p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">管理項目をクリックすると詳細へ移ります</p></div>
-        {% endif %}
-        <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
-            {% for image in page_obj %}
-                <div class="col mb-5">
-                    <div class="card">
-                        <a class="btn" href="{% url 'toolkeeper_app:asset_detail' image.asset.id %}">
-                            <!--badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.8rem; font-size: 15px;">{{ image.asset.group.group_name }}</div>
-                            <!-- Product image-->
-                            {% if image.image %}
-                                <img class="card-img-top" src="{{ image.image.url }}" alt="..." />
-                            {% endif %}
-                            <!-- Product details-->
-                            <div class="card-body px-2">
-                                <div class="text-center">
-                                    <!-- Product name-->
+
+            <div class="tab1-body__item tab1-body__item--2">
+                <div class="row gx-lg-5 row-cols-lg-3">
+                    {% for image in image_list %}
+                        {% if image.asset in latest_result_class_zero_assets %}
+                            <div class="col mb-3">
+                                <div class="card" style="padding: 5px;">
+                                    <div class="badge text-black position-absolute" style="top: 0.2rem; right: 0.1rem; font-size: 15px;">{{ image.asset.history_set.last.checked_at|date:"m月d日 H:i:s" }}</div>
                                     <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <!--何か入れたければ入れる-->
+                                    <div style="overflow-x: auto; overflow-y: hidden; white-space: nowrap;">
+                                        {% for item in image.asset.history_set.last.result_set.all %}
+                                            {% if item.result_class != 9 and item.result_class != 1 %}
+                                                <strong><h6 style="display: inline;"><font color="#ff6347">{{ item.item.item_name }}</font>,</h6></strong>
+                                            {% endif %}
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
-                        </a>
-                    </div>
+                        {% endif %}
+                    {% endfor %}
                 </div>
-                {% empty %}
-                <p>管理項目がありません</p>
-            {% endfor %}
-        </div>
-        <!--<p>{{ image_list }}</p>-->
-
-        <!-- ページネーションリンクの表示 -->
-        {% if page_obj.paginator.count > 0 %}
-            <div class="d-flex justify-content-center mt-4">
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page=1&group={{ request.GET.group }}">最初</a></li>
-                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}&group={{ request.GET.group }}">前へ</a></li>
-                    {% endif %}
-                    <!-- ページ番号のセレクトボックス -->
-                    <li class="page-item">
-                        <select class="form-select" onchange="window.location.href = '?page=' + this.value + '&group=' + '{{ request.GET.group }}';">
-                            {% for page_num in page_obj.paginator.page_range %}
-                                <option value="{{ page_num }}" {% if page_num == page_obj.number %}selected{% endif %}>{{ page_num }}</option>
-                            {% endfor %}
-                        </select>
-                    </li>
-                    {% if page_obj.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}&group={{ request.GET.group }}">次へ</a></li>
-                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&group={{ request.GET.group }}">最後</a></li>
-                    {% endif %}
-                </ul>
             </div>
-        {% endif %}
+        </div>
+
+        
     </div>
 </section>
+
+<style>
+    .tab1 {
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        background-color: #fff !important;
+        margin: 0 !important;
+    }
+    .tab1__item {
+        flex: 1;
+        flex-basis: 120px;
+    }
+    .tab1__link {
+        display: block;
+        text-decoration: none;
+        color: #fff;
+        background-color: #212529;
+        cursor: pointer;
+        border-top-right-radius: 15px;
+        border-top-left-radius: 15px;
+    }
+    .tab1__link.on {
+        background-color: #666666;
+    }
+    .tab1-body__item {
+        margin: 30px 15px;
+        display: none;
+        text-align: center;
+    }
+    .tab1-body__item.on {
+        display: block;
+    }
+</style>
+{% endblock %}
+
+{% block js %}
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var $tab__link = $('.tab1__link')
+        var $tab_body_item = $('.tab1-body__item')
+        $tab__link.on('click', function (e) {
+            var target = $(e.currentTarget)
+            // タブの表示非表示
+            $tab__link.removeClass('on')
+            target.addClass('on')
+            // タブの中身の表示非表示
+            var num = target.data('tab-body')
+            $tab_body_item.removeClass('on')
+            $('.tab1-body__item--' + num).addClass('on')
+        })
+    })
+</script>
 {% endblock %}
