--- a/Django_Docker/toolkeeper_app/templates/asset_list.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list.html
@@ -116,13 +116,13 @@
 
 
             <div class="tab1-body__item tab1-body__item--2">
-                <div class="row gx-lg-5 row-cols-lg-3">
+                <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
                     {% for image in image_list %}
                         {% if image.asset in latest_result_class_zero_assets %}
                             <div class="col mb-3">
                                 <div class="card" style="padding: 5px;">
                                     <div class="badge text-black position-absolute" style="top: 0.2rem; right: 0.1rem; font-size: 15px;">{{ image.asset.history_set.last.checked_at|date:"m月d日 H:i:s" }}</div>
-                                    <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
+                                    <h5 class="fw-bolder mt-4">{{ image.asset.asset_name }}</h5>
                                     <div style="overflow-x: auto; overflow-y: hidden; white-space: nowrap;">
                                         {% for item in image.asset.history_set.last.result_set.all %}
                                             {% if item.result_class != 9 and item.result_class != 1 %}
