--- a/Django_Docker/toolkeeper_app/templates/asset_list_tab.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list_tab.html
@@ -1,9 +1,7 @@
 {% if image_list %}
-    <div>
-        <p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">
-            管理項目をクリックすると詳細へ移ります
-        </p>
-    </div>
+    <p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">
+        項目をクリックすると詳細へ移ります
+    </p>
 {% endif %}
 
 <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
