--- a/Django_Docker/toolkeeper_app/templates/asset_list.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list.html
@@ -13,7 +13,7 @@
     <div class="container px-4 px-lg-5 mt-3">
         <div class="row row-cols-1 row-cols-md-2 justify-content-center justify-content-md-between d-flex mb-4">
             <h2 class="col w-auto mb-4 my-md-auto">管理項目一覧</h2>
-            <div class="col row justify-content-center w-auto mx-auto mx-md-0 ms-md-auto">
+            <div class="col row justify-content-center w-auto mx-auto mx-md-0 ms-md-auto px-md-0">
                 <button class="col-auto learn-more my-2">
                     <span class="circle" aria-hidden="true">
                       <span class="icon arrow"></span>
