--- a/Django_Docker/toolkeeper_app/templates/asset_list_danger_tab.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list_danger_tab.html
@@ -25,7 +25,7 @@
 {% if latest_result_class_zero_assets %}
     <h4 class="text-center mb-4 py-2">
         <i class="bi bi-exclamation-circle text-danger pe-1"></i>
-        {{ latest_result_class_zero_assets|length }} つの管理項目で異常がありました！
+        {{ latest_result_class_zero_assets|length }} つの管理項目に異常があります
     </h4>
     
     {% if image_list %}
