--- a/Django_Docker/toolkeeper_app/templates/history_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/history_detail.html
@@ -69,7 +69,7 @@
 
             <div class="row">
                 <div class="col-3 col-lg-2">
-                    <strong>ユーザー</strong>
+                    <strong>確認ユーザー</strong>
                 </div>
                 <div class="col-9 col-lg-10">
                     {{ history.user.username }}
