--- a/Django_Docker/toolkeeper_app/templates/history_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/history_detail.html
@@ -39,7 +39,7 @@
                                     <span class="col-auto me-sm-0 ps-0">：
                                         {% if result.result_class == 0 %}
                                             <u><font color="#ff6347">無し</font></u>
-                                        {% elif result.result_class == 1 %}
+                                        {% elif result.result_class == 1 or result.result_class == 2 %}
                                             <u><font color="#99CC33">有り</font></u>
                                         {% else %}
                                             {{ result.result_class }}
@@ -114,7 +114,6 @@
             <a class="btn btn-3 float-right" href="{% url 'toolkeeper_app:history_list' %}">履歴一覧に戻る</a>
             {% if history in abnormal_history_list %}
                 <a class="btn btn-3 float-right" href="{% url 'toolkeeper_app:asset_detail' history.asset.id %}">管理項目詳細へ</a>
-                <a class="btn btn-danger" href="{% url 'toolkeeper_app:history_list2' %}">異常な履歴一覧へ</a>
             {% endif %}
         </div>
     </div>
