--- a/Django_Docker/toolkeeper_app/templates/history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list.html
@@ -18,34 +18,8 @@
                         <a class="nav-link" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧</a>
                     </span>
                 </button>
-                <button class="col-auto learn-more my-2">
-                    <span class="circle" aria-hidden="true">
-                    <span class="icon arrow"></span>
-                    </span>
-                    <span class="col-auto button-text ps-2 text-warning">
-                        <a class="nav-link" href="{% url 'toolkeeper_app:history_list2' %}">異常な履歴</a>
-                    </span>
-                </button>
             </div>
         </div>
-        <!-- <div class="col row justify-content-center w-auto mx-auto mx-md-0 ms-md-auto">
-            <button class="col-auto learn-more my-2">
-                <span class="circle" aria-hidden="true">
-                  <span class="icon arrow"></span>
-                </span>
-                <span class="col-auto button-text ps-2">
-                    <a class="nav-link" href="{% url 'toolkeeper_app:asset_create' %}">新規作成</a>
-                </span>
-            </button>
-            <button class="col-auto learn-more my-2">
-                <span class="circle" aria-hidden="true">
-                  <span class="icon arrow"></span>
-                </span>
-                <span class="button-text ps-2">
-                    <a class="nav-link" href="{% url 'toolkeeper_app:history_list' %}">履歴一覧</a>
-                </span>
-            </button>
-        </div> -->
         <form method="get">
             <div class="mb-3">
                 <div class="row row-cols-1 row-cols-md-3">
@@ -69,43 +43,52 @@
 
         <hr>
 
-        {% if history_list %}
-            <div><p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">履歴をクリックすると詳細へ移ります</p></div>
-        {% endif %}
 
-        <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
-            
-            {% for history in history_list %}
-                <a class="btn" href="{% url 'toolkeeper_app:history_detail' history.pk %}">
-                    <div class="col">
-                        <div class="card">
-                            <!--badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem; font-size: 13px;">{{ history.group.group_name }}</div>
+        <style>
+            th, td {
+                border: 2px double #dee2e6;
+            }
+        
+            table {
+                border-collapse: collapse;
+                width: 100%;
+            }
+        
+            /* 必要に応じて他のスタイルを追加 */
+        </style>
+        
+        <!-- tableタグの追加 -->
+        <table class="table">
+            <thead>
+                <tr class="text-center" style="background-color: aliceblue;">
+                    <th scope="col">確認日時</th>
+                    <th scope="col">管理項目名</th>
+                    <th scope="col">グループ名</th>
+                    <th scope="col">ユーザー</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for history in history_list %}
+                    <tr>
+                        <td>{{ history.checked_at }}</td>
+                        <td>
+                            {{ history.asset.asset_name }}
                             {% if history in abnormal_history_list %}
-                            <div class="badge bg-dark text-danger position-absolute" style="top: 0.5rem; left: 0.5rem; font-size: 20px;"><i class="bi bi-exclamation-circle"></i></div>
+                                <i class="bi bi-exclamation-circle text-danger"></i>
                             {% endif %}
-                            <!-- Product details-->
-                            <div class="card-body">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder {% if history in abnormal_history_list %}text-danger{% endif %}">{{ history.asset.asset_name }}</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small mb-2">
-                                        確認日時：{{ history.checked_at }}
-                                        <br>
-                                        <!-- 更新日時: {{ history.updated_at }}
-                                        <br> -->
-                                        ユーザー：{{ history.user }}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
+                        </td>
+                        <td>{{ history.group.group_name }}</td>
+                        <td>{{ history.user }}</td>
+                        <td><a href="{% url 'toolkeeper_app:history_detail' history.pk %}">詳細</a></td>
+                    </tr>
                 {% empty %}
-                <p>履歴が存在しません</p>
-            {% endfor %}
-        </div>
+                    <tr>
+                        <td colspan="5">履歴が存在しません</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
 
         <!-- ページネーションリンクの表示 -->
